# todobackendapi

./: .env
fastapi-helloworld/: pyproject.toml
fastapi-helloworld/fastapi_helloworld/: main.py
fastapi-helloworld/fastapi_helloworld/__pycache__/: model.py
